Implemented basic fan entity

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ ignore-words-list = hass
 python_version = 3.7
 show_error_codes = true
 ignore_errors = false
-warn_return_any = true
+warn_return_any = false
 ignore_missing_imports = True
 disallow_any_generics = false
 pretty = true
