Fixed compatibility with homeassistant >= 2021.5

--- a/custom_components/prana/manifest.json
+++ b/custom_components/prana/manifest.json
@@ -2,6 +2,7 @@
   "domain": "prana",
   "name": "Prana Recuperators",
   "documentation": "",
+  "version": "0.2.0",
   "dependencies": [],
   "codeowners": [
     "@corvis"
